# dslr

./: pyproject.toml  tests.py
notebooks/: histogram.ipynb
sample/: __init__.py  histogram.py  scatter_plot.py  stat.py
src/dslr/: __init__.py  histogram.py  pair_plot.py  read.py  scatter_plot.py  str_data.py
src/dslr.egg-info/: PKG-INFO  SOURCES.txt
tests/: tests.py
